static/css/style.css
html, body, {
  height: 100%;
  width: 100%;
  margin: 0;
}

#countymap {
  display: none;
  position: relative;
  height: 100%;
  width: 98%;
}

#logo {
  text-align: left;
  margin: 10px 10px;
  width: 80%;
}

#icons {
  text-align: center;
  padding: 0px 5px 0px 5px;
}

.genre-icon {
  text-align: center;
  opacity: 0.3;
  width: 100%;
}

.leaflet-left .leaflet-control {
  background-color: #555a66;
  color: #ffffff;
  font-size: 15px;
  border-radius: 5px;
}

.genre-icon:hover {
  opacity: 1;
  /*chrome doesn't seem to like hovering to opacity: 1*/
}

.genre-icon.selected {
  text-align: center;
  opacity: 1;
}

*:focus {
  outline: none;
}

#about {
  opacity: 0.7;
}

#about:hover {
  opacity: 1;
}

#displayInfo {
  width: 100%;
  font-family: 'Roboto', sans-serif;
  margin: 5px 10px 5px 25px;
  padding: 10px;
  font-size: 15px;
  color: white;
  background-color: #555a66;
  opacity: 1;
}

#displayStats {
  font-family: 'Roboto', sans-serif;
  display: inline-block;
  position: relative;
  height: 100%;
  width: 100%;
  vertical-align: top;
  margin: 5px 10px 5px 10px;
  padding: 10px;
  color: #555a66;
  z-index: 0;
}

.axis {
  font-family: 'Roboto', sans-serif;
  fill: none;
  shape-rendering: crispEdges;
}

.bar-text, .axis-text {
  font-family: 'Roboto', sans-serif;
  font-size: 10px;
}

#mainPanel {
  padding: 0px;
  margin: 0px;
}

#navbar {
  text-align: left;
  margin: 10px;
}

#mapCanvas {
  position: relative;
  width: 100%;
  vertical-align: top;
  margin: 10px 20px 20px 20px;
  align-items: center;
}

#tooltip, #stats-tooltip{
  font-family: 'Roboto', sans-serif;
  position: absolute;
  text-align: center;
  padding: 20px;
  margin: 10px;
  font: 12px;
  pointer-events: none;
  background: rgba(0, 0, 0, 0.9);
  border-radius: 5px;
  font-size: 12px;
  padding: 4px;
  color: white;
  opacity: 0;
  display: inline-block;
}

.county-info, .venue-info .leaflet-popup-content-wrapper {
  font-family: 'Roboto', sans-serif;
  font: 12px;
  text-align: center;
  background: rgba(0, 0, 0, 0.7);
  color: white;
  padding: 10px;
  border-radius: 5px;
  box-shadow: 0 0 15px rgba(0,0,0,0.2);
}

#tooltip h4, #stats-tooltip h4,
.county-info h4,
.venue-info .leaflet-popup-content-wrapper h4 {
  margin: 0;
  font-size: 16px;
  font-weight: bold;
}

#tooltip table,
.county-info table,
.venue-info .leaflet-popup-content-wrapper table {
  text-align: center;
  width: 100%;
  white-space: nowrap;
}

th {
  text-align: left;
}

#tooltip tr td,
.county-info tr td,
.venue-info .leaflet-popup-content-wrapper tr td {
  margin: 0;
  opacity: 0.6;
}

#tooltip tr td:nth-child(1) {
  width: 50px;
}

#tooltip tr td:nth-child(2) {
  text-align: center;
}

/* Next two entries are for the colouring of the info text box*/
:root {
  --displayInfo-color: #888b94;
  --displayInfo-text-color: #FFFFFF;
}

#displayInfo {
  background-color: var(--displayInfo-color);
  color: var(--displayInfo-text-color);
}

.center {
	text-align: center;
}

.left {
	text-align: left;
}

.titleCase {
  text-transform: capitalize;
}

.legend-color {
  float: left;
  width: 10px;
  height: 10px;
  margin: 5px;
  border: 1px solid rgba(0, 0, 0, .2);
}

.pop {
	background: #002f81;
}

.rock {
	background: #2a7187;
}

.hip-hop {
	background: #0381b4;
}

.rnb {
	background: #4a2777;
}

.classical_jazz {
	background: #b41162;
}

.electronic {
	background: #bf9076;
}

.country_folk {
	background: #56371b;
}

/* viewport width fix */

.row {
  margin-right: 0;
}

